# Directorio-de-casos

./: package-lock.json  package.json
.github/workflows/: compilar_windows.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  test_dialog.rs  test_dialog2.rs  test_dialog3.rs  test_download.rs  test_download2.rs  test_download3.rs  test_download4.rs  test_download5.rs  test_reqwest.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ensamblaje.rs  filesystem.rs  mod.rs
src-tauri/src/db/: core.rs  migrations.rs  mod.rs
src/lib/components/auth/: LoginScreen.svelte
src/lib/components/casos/: CasoAgenda.svelte  CasoDocumentos.svelte  CasoForm.svelte  CasoTimeline.svelte  CasosList.svelte
src/lib/components/clientes/: ClienteForm.svelte  ClientesList.svelte
src/lib/components/dashboard/: MiniCalendar.svelte
src/lib/components/layout/: AppShell.svelte  Sidebar.svelte  Topbar.svelte
src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  ConfirmDialog.svelte  EmptyState.svelte  (+6 more)
src/lib/services/: actuacionService.js  calendarioService.js  casoService.js  clienteService.js  configService.js  dashboardService.js  db.js  documentoService.js  modelosService.js  pdfService.js  searchService.js
src/lib/stores/: auth.svelte.js
src/lib/utils/: formatters.js
src/routes/: +layout.svelte  +page.svelte
src/routes/calendario/: +page.svelte
src/routes/casos/: +page.svelte
src/routes/clientes/: +page.svelte
src/routes/configuracion/: +page.svelte
(+2 files in other folders)
